tvoj popis zmeny

--- a/SushiSpot/index.html
+++ b/SushiSpot/index.html
@@ -7,32 +7,35 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>SushiSpot</h1>
-    <nav>
-      <ul>
-        <li><a href="galeria.html">Galéria</a></li>
-        <li><a href="#onas">O nás</a></li>
-        <li><a href="#kontakt">Kontakt</a></li>
-      </ul>
-    </nav>
-  </header>
 
-  <section id="onas">
-    <h2>O nás</h2>
-    <p>Sme moderné sushi bistro plné chutí, čerstvosti a tradície.</p>
-  </section>
+  <!-- Obsah stránky -->
+  <div class="content">
+    <header>
+      <h1>SushiSpot</h1>
+      <nav>
+        <ul>
+          <li><a href="galeria.html">Galéria</a></li>
+          <li><a href="#onas">O nás</a></li>
+          <li><a href="#kontakt">Kontakt</a></li>
+        </ul>
+      </nav>
+    </header>
 
-  <section id="kontakt">
-    <h2>Kontaktuj nás</h2>
-    <form>
-      <input type="text" placeholder="Tvoje meno" required>
-      <input type="email" placeholder="Email" required>
-      <textarea placeholder="Správa"></textarea>
-      <button type="submit">Odoslať</button>
-    </form>
-  </section>
+    <section id="onas">
+      <h2>O nás</h2>
+      <p>Sme moderné sushi bistro plné chutí, čerstvosti a tradície.</p>
+    </section>
 
-  <script src="script.js"></script>
+    <section id="kontakt">
+      <h2>Kontaktuj nás</h2>
+      <form>
+        <input type="text" placeholder="Tvoje meno" required>
+        <input type="email" placeholder="Email" required>
+        <textarea placeholder="Správa" required></textarea>
+        <button type="submit">Odoslať</button>
+      </form>
+    </section>
+  </div>
+
 </body>
 </html>
