--- a/SushiSpot/onas.html
+++ b/SushiSpot/onas.html
@@ -3,26 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SushiSpot</title>
+  <title>O nás – SushiSpot</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <header>
-    <h1>SushiSpot</h1>
+    <h1>SushiSpot – O nás</h1>
     <nav>
       <ul>
-        <li><a href="galeria.html">Galéria</a></li>
-        <li><a href="onas.html">O nás</a></li>
+        <li><a href="index.html">Domov</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
+        <li><a href="galeria.html">Galéria</a></li>
       </ul>
     </nav>
   </header>
 
-  <div class="hero">
-    <img src="SushiImage.jpeg" alt="SushiSpot pozadie">
-  </div>
-  
-
+  <section id="onas">
+    <h2>O nás</h2>
+    <p>Sme moderné sushi bistro plné chutí, čerstvosti a tradície.</p>
+  </section>
 </body>
 </html>
