tvoj popis zmeny

--- a/SushiSpot/index.html
+++ b/SushiSpot/index.html
@@ -20,8 +20,22 @@
   </header>
 
   <div class="hero">
-    <img src="SushiImage.jpeg" alt="SushiSpot pozadie">
+    <img src="SushiSticks.jpeg" class="sticky-side sticky-left" alt="ľavé paličky">
+    
+    <div class="hero-content">
+      <h1>Vitaj v SushiSpot</h1>
+      <p>Objav svet autentického sushi v modernom štýle.</p>
+      <a href="galeria.html" class="btn">Pozrieť ponuku</a>
+    </div>
+    
+    <img src="SushiSticks.jpeg" class="sticky-side sticky-right" alt="pravé paličky">
   </div>
+  
+  
+  
+  
+  
+  
   
 
 </body>
